--- a/DCPU16_SIM.cbp
+++ b/DCPU16_SIM.cbp
@@ -21,9 +21,11 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-flto" />
 				</Compiler>
 				<Linker>
+					<Add option="-O3" />
+					<Add option="-flto" />
 					<Add option="-s" />
 				</Linker>
 			</Target>
@@ -31,7 +33,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add option="-std=c++2a" />
 		</Compiler>
+		<Unit filename="base_sim.hpp" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
