--- a/DCPU16_SIM.cbp
+++ b/DCPU16_SIM.cbp
@@ -34,6 +34,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 			<Add option="-std=c++2a" />
+			<Add option="-Wall" />
+			<Add directory="deps" />
 		</Compiler>
 		<Unit filename="base_sim.hpp" />
 		<Unit filename="main.cpp" />
