--- a/DCPU16_SIM.cbp
+++ b/DCPU16_SIM.cbp
@@ -21,6 +21,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-fexpensive-optimizations" />
 					<Add option="-flto" />
 				</Compiler>
 				<Linker>
@@ -29,12 +30,24 @@
 					<Add option="-s" />
 				</Linker>
 			</Target>
+			<Target title="Profile">
+				<Option output="bin/Profile/DCPU16_SIM" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Profile/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-pg" />
+					<Add option="-g" />
+				</Compiler>
+				<Linker>
+					<Add option="-pg -lgmon" />
+				</Linker>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 			<Add option="-std=c++2a" />
-			<Add option="-Wall" />
 			<Add directory="deps" />
 		</Compiler>
 		<Unit filename="base_sim.hpp" />
