--- a/DCPU16_SIM.cbp
+++ b/DCPU16_SIM.cbp
@@ -45,6 +45,20 @@
 					<Add option="-pg -lgmon" />
 				</Linker>
 			</Target>
+			<Target title="StaticValidate">
+				<Option output="bin/StaticValidate/DCPU16_SIM" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/StaticValidate/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add option="-DSTATIC_CHECK_UB_DECODER" />
+				</Compiler>
+				<Linker>
+					<Add option="-O2" />
+					<Add option="-s" />
+				</Linker>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
